[package]
name = "panopticonbackend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.1"
actix-web = { version = "4.0.1", features = ["rustls"] }
chrono = { version = "0.4.19", features = ["serde"] }
config = "0.11.0"
deadpool-postgres = { version = "0.10.2", features = ["serde"] }
derive_more = "0.99.2"
dotenv = "0.15.0"
futures-util = "0.3.21"
opentelemetry = { version = "0.17.0", features = ["rt-tokio-current-thread", "metrics"] }
opentelemetry-jaeger = { version = "0.16.0", features = ["rt-tokio-current-thread"] }
rustls = "0.20.4"
rustls-pemfile = "1.0.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
tokio-pg-mapper = "0.2.0"
tokio-pg-mapper-derive = "0.2.0"
tokio-postgres = { version = "0.7.5", features = ["with-chrono-0_4"] }
tokio-postgres-rustls = "0.9.0"
tracing = "0.1.34"
tracing-actix-web = "0.5.1"
tracing-bunyan-formatter = "0.3.2"
tracing-opentelemetry = "0.17.2"
tracing-subscriber = { version = "0.3.11", features = ["env-filter", "registry"] }
uuid = { version = "0.8.2", features = ["v4"] }
